# Nemesis

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 01-project-setup.md  01a-setup-basics.md  01b-core-infrastructure.md  01c-rust-devops.md  02-rust-parser.md  02a-rust-core-models.md  02b-rust-extraction.md  02c-python-bridge.md  02d-parser-testing.md  03-graph-layer.md  03a-graph-foundation.md  03b-kuzu-crud.md  03c-neo4j-memory.md  03d-graph-integration.md  04-vector-store.md  04a-embedding-providers.md  04b-vector-store-core.md  04c-vector-store-advanced.md  05-indexing-pipeline.md  05a-indexer-models.md  05b-chunking.md  05c-delta-ops.md  05d-single-file-pipeline.md  05e-full-project-pipeline.md  06-mcp-server.md  06a-server-foundation.md  06b-code-intelligence.md  06c-memory-index-tools.md  06d-smart-integration.md  07-memory-system.md  07a-memory-models.md  07b-rules-manager.md  07c-decisions-manager.md  07d-conventions-context.md  07e-auto-learn.md  08-cli-hooks.md  08a-cli-commands.md  08b-file-watcher.md  08c-hooks-system.md  2026-02-20-multi-project-design.md  (+5 more)
nemesis/: __init__.py
nemesis-parse/: Cargo.toml  pyproject.toml
nemesis-parse/src/: extractor.rs  lib.rs  models.rs  parser.rs
nemesis-parse/src/languages/: mod.rs  python.rs  rust_lang.rs  typescript.rs
nemesis/core/: __init__.py  cli.py  config.py  engine.py  hooks.py  registry.py  server.py  watcher.py
nemesis/graph/: __init__.py  adapter.py  kuzu.py  neo4j.py
nemesis/indexer/: __init__.py  chunker.py  delta.py  models.py  pipeline.py  tokens.py
nemesis/memory/: __init__.py  auto_learn.py  context.py  conventions.py  decisions.py  models.py  rules.py
nemesis/parser/: __init__.py  bridge.py  models.py
nemesis/tools/: __init__.py  tools.py
nemesis/vector/: __init__.py  embeddings.py  store.py
tests/: conftest.py  test_conftest.py  test_integration_final.py  test_integration_setup.py  test_package_structure.py
tests/test_core/: test_cli.py  test_config.py  test_engine.py  test_hooks.py  test_registry.py  test_server.py  test_watcher.py
tests/test_graph/: test_adapter.py  test_factory.py  test_integration.py  test_kuzu.py  test_kuzu_memory.py  test_neo4j.py
tests/test_indexer/: test_chunker.py  test_delta.py  test_models.py  test_pipeline.py  test_tokens.py
tests/test_memory/: test_auto_learn.py  test_context.py  test_conventions.py  test_decisions.py  (+3 more)
(+9 files in other folders)
