[package]
name = "nemesis-parse"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter AST parser for Nemesis — Python extension via PyO3"

[lib]
name = "nemesis_parse"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
